<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_BFSAssemblyState" Id="{e8b7ce2e-e310-4421-b2c7-e46b8220b18b}">
    <Declaration><![CDATA[TYPE ST_BFSAssemblyState :
STRUCT
    iState : DINT;		// state index
    bDiscovered : BOOL;	// BFS search discovery status
    iParent		: DINT;	// BFS parent state

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>