<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <GVL Name="GVL_DiagnosticPaddle" Id="{14852951-363f-4764-8553-afbd56890d2f}">
    <Declaration><![CDATA[VAR_GLOBAL



    // Define axis states for each axis. These are fed to a FB_PositionState manager for each axis
    // X axis position states
    stDPXPosPark : DUT_PositionState :=		(sName:= 'PARK',
                                             fPosition := 5.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                            fDecel:=1.0,
                                             bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);
    stDPXPosCenter : DUT_PositionState :=	(sName:= 'CENTER',
                                             fPosition := 10.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                             fDecel:=1.0,
                                            bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);
    stDPXPosKnife : DUT_PositionState :=	(sName:= 'KNIFE',
                                             fPosition := 15.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                             fDecel:=1.0,
                                            bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);



    // Y axis position states
    stDPYPosPark : DUT_PositionState :=		(sName:= 'PARK',
                                             fPosition := 5.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                            fDecel:=1.0,
                                             bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);
    stDPYPosCenter : DUT_PositionState :=	(sName:= 'CENTER',
                                             fPosition := 10.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                             fDecel:=1.0,
                                            bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);
    stDPYPosDiode : DUT_PositionState :=	(sName:= 'DIODE',
                                             fPosition := 15.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                            fDecel:=1.0,
                                             bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);
    stDPYPosPinhole : DUT_PositionState :=	(sName:= 'PINHOLE',
                                             fPosition := 20.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                             fDecel:=1.0,
                                            bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);
    stDPYPosYAG1 : DUT_PositionState :=		(sName:= 'YAG1',
                                             fPosition := 25.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                             fDecel:=1.0,
                                            bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);
    stDPYPosYAG2 : DUT_PositionState :=		(sName:= 'YAG2',
                                             fPosition := 30.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                             fDecel:=1.0,
                                            bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);
    stDPYPosYAG3 : DUT_PositionState :=		(sName:= 'YAG3',
                                             fPosition := 35.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                             fDecel:=1.0,
                                            bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);
    stDPYPosKnife : DUT_PositionState :=	(sName:= 'KNIFE',
                                             fPosition := 40.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                             fDecel:=1.0,
                                            bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);

    // Z axis position states
    stDPZPosPark : DUT_PositionState :=		(sName:= 'PARK',
                                             fPosition := 5.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                            fDecel:=1.0,
                                             bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);
    stDPZPosCenter : DUT_PositionState :=	(sName:= 'CENTER',
                                             fPosition := 10.0,
                                             fDelta:=1.0,
                                             fVelocity:=5.0,
                                             fAccel:=1.0,
                                             fDecel:=1.0,
                                            bMoveOk:=FALSE,
                                             bLocked:=TRUE,
                                             bValid:=TRUE);

    stDPPark 	: ST_BFSAssemblyState := (iState:=1, bDiscovered:=FALSE, iParent:=0);
    stDPUp	 	: ST_BFSAssemblyState := (iState:=2, bDiscovered:=FALSE, iParent:=0);
    stDPCenter 	: ST_BFSAssemblyState := (iState:=3, bDiscovered:=FALSE, iParent:=0);
    stDPPinhole : ST_BFSAssemblyState := (iState:=4, bDiscovered:=FALSE, iParent:=0);
    stDPDiode 	: ST_BFSAssemblyState := (iState:=5, bDiscovered:=FALSE, iParent:=0);
    stDPYag1 	: ST_BFSAssemblyState := (iState:=6, bDiscovered:=FALSE, iParent:=0);
    stDPYag2 	: ST_BFSAssemblyState := (iState:=7, bDiscovered:=FALSE, iParent:=0);
    stDPYag3 	: ST_BFSAssemblyState := (iState:=8, bDiscovered:=FALSE, iParent:=0);
    stDPKnife 	: ST_BFSAssemblyState := (iState:=9, bDiscovered:=FALSE, iParent:=0);

    arrDPStates : ARRAY [1..9] OF ST_BFSAssemblyState := [stDPPark, stDPUp, stDPCenter, stDPPinhole, stDPDiode,
                                                          stDPYag1, stDPYag2, stDPYag3, stDPKnife];

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>