<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <POU Name="FB_Queue" Id="{6ea040ae-b7bd-4416-9d38-5e0a8bf09ce2}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Queue
VAR_INPUT
    stQ : ST_Queue;
END_VAR
VAR_OUTPUT
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Dequeue" Id="{b94b82e8-aa86-4a79-a6b2-21e9699f681b}">
      <Declaration><![CDATA[METHOD PUBLIC Dequeue : ST_BFSAssemblyState
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF NOT THIS^.Queue_Is_Empty() THEN
    Dequeue := stQ.arrQueue[stQ.iFront];
    stQ.iFront := stQ.iFront + 1;
    stQ.iCount := stQ.iCount - 1;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Empty_Queue" Id="{09f8b1e5-6710-42d8-b701-e838b0740d25}">
      <Declaration><![CDATA[METHOD Empty_Queue : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Reset queue to ST_Queue initial values
stQ.iCount := 0;
stQ.iBack := -1;
stQ.iFront := 0;]]></ST>
      </Implementation>
    </Method>
    <Method Name="Enqueue" Id="{bf782b57-4eaa-4663-9536-f545bd3bedb6}">
      <Declaration><![CDATA[METHOD PUBLIC Enqueue : BOOL
VAR_INPUT
    element : ST_BFSAssemblyState;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF 	NOT THIS^.Queue_Is_Full() THEN
    IF stQ.iBack = stQ.iLength THEN
        stQ.iBack := -1;
    END_IF
    stQ.iBack := stQ.iBack + 1;
    stQ.arrQueue[stQ.iBack] := element;
    stQ.iCount := stQ.iCount + 1;
    Enqueue := TRUE;
ELSE
    Enqueue := FALSE;
END_IF

    ]]></ST>
      </Implementation>
    </Method>
    <Method Name="Queue_Is_Empty" Id="{dd83904e-af9e-482d-b671-297e3bf944be}">
      <Declaration><![CDATA[METHOD Queue_Is_Empty : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF stQ.iCount = 0 THEN
    Queue_Is_Empty := TRUE;
ELSE
    Queue_Is_Empty := FALSE;
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Queue_Is_Full" Id="{94c1dc52-2532-465c-b0c1-f78f10bfb3ed}">
      <Declaration><![CDATA[METHOD Queue_Is_Full : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[IF stQ.iCount = stQ.iLength THEN
    Queue_Is_Full := TRUE;
ELSE
    Queue_Is_Full := FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>